<?xml version="1.0" encoding="utf-8"?>
<!-- это макет для портретной ориентации -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">


    <Button
        android:id="@+id/buttonCityHeraldry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/cityheraldry" />

    <Button
        android:id="@+id/buttonFragmentManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/fragmentmanager" />

    <Button
        android:id="@+id/buttonObserver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/observer" />

    <Button
        android:id="@+id/buttonTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/timer" />

</LinearLayout>